Reset password changes

--- a/src/app/pre-login/components/reset-password/reset-password.component.html
+++ b/src/app/pre-login/components/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
               [for]="password"
               class="form-label password-label"
               labelCssClass="k-form-label"
-              >New Password</kendo-label
+              >New password</kendo-label
             >
             <div class="input-wrapper">
               <input
