--- a/src/app/pre-login/components/reset-password/reset-password.component.scss
+++ b/src/app/pre-login/components/reset-password/reset-password.component.scss
@@ -91,6 +91,7 @@
 .need-help {
   color: #727272;
   margin-top: 73.5px;
+  font-size: 16px;
 }
 
 .email-team {
@@ -207,6 +208,10 @@ input:required:invalid {
   span {
     font-size: 14px;
   }
+}
+
+.k-form-buttons {
+  margin-top: 0;
 }
 
 .fa-check-circle {
