forgot-password added

--- a/src/app/pre-login/components/forgot-password/forgot-password.component.scss
+++ b/src/app/pre-login/components/forgot-password/forgot-password.component.scss
@@ -10,8 +10,8 @@
   }
 }
 
-.login-form {
-  padding: 18.25rem 0 0 9.2rem;
+.form {
+  padding: 14.87rem 0 0 7.125rem;
 
   img {
     height: 48px;
@@ -29,11 +29,20 @@
   }
 }
 
-.login-title {
-  margin-top: 82px;
+.title {
+  margin-top: 73.5px;
   color: #0a4569;
   font-weight: 700;
   font-size: 30px;
+  letter-spacing: 1.5px;
+}
+
+.description {
+  width: 310px;
+  color: #707070;
+  font-size: 16px;
+  font-weight: normal;
+  margin-top: 31.92px;
 }
 
 .form-input {
@@ -43,8 +52,8 @@
   border: 1px solid #707070;
 }
 
-.password-label {
-  margin-top: 41.5px;
+.k-form-fieldset {
+  margin-top: 46.48px !important;
 }
 
 .btn-save {
@@ -54,22 +63,16 @@
   background-color: #0b4569;
   color: white;
   font-weight: normal;
-  margin-top: 44px;
+  margin-top: 41.98px;
   font-size: 16px;
   font-weight: 100;
-  padding: 22px 124.5px 16px;
-}
-
-.forgot-password {
-  color: #727272;
-  text-decoration: underline;
-  margin-top: 44px;
-  font-size: 16px;
+  padding: 20px 81px 18px;
 }
 
 .need-help {
   color: #727272;
-  margin-top: 33px;
+  margin-top: 74.5px;
+  font-size: 16px;
 }
 
 .email-team {
@@ -77,67 +80,53 @@
 }
 
 .email-input {
-  margin-top: 8.5px
-}
-
-.password-input-wrapper {
-  position: relative;
-}
-
-.eye-icon {
-  position: absolute !important;
-  top: 55%;
-  right: 12px;
-  transform: translateY(-50%);
-  cursor: pointer;
-  color: #9f9f9f;
-}
-
-.password-container {
-  margin-top: 41.5px;
+  margin-top: 8.5px;
 }
 
 .form-label {
   color: #495057;
   font-size: 16px;
+  font-weight: normal;
 }
 
 .error-message {
   margin-top: 6.5px;
   font-style: normal;
-  color: #CC0027;
+  color: #cc0027;
 }
 
-.error {
-  width: 319px;
+.link-sent {
+  width: 318.62px;
   height: 44px;
-  background-color: #ec8a0c;
+  background-color: #237b4b;
   color: white;
+  display: flex;
   align-items: center;
-  padding-left: 15px;
-  font-size: 14px;
-  font-weight: normal;
-  margin-top: 44px;
+  margin-top: 51.92px !important;
 
   span {
     font-size: 14px;
-    font-weight: 100;
   }
 }
 
-.fa-exclamation-triangle {
-  font-size: 22px;
-  margin-right: 5px;
+.fa-check-circle {
+  font-size: 23px;
+  margin-left: 14px;
+  margin-right: 10px;
 }
 
 .cross-icon {
-  height: 20px;
-  width: 20px;
-  margin-left: 12px;
-  font-weight: 500;
+  height: 25px !important;
+  width: 25px !important;
+  margin-left: 80px;
+  cursor: pointer;
 }
 
-.error-message {
-  color: red;
+input:required:invalid {
+  border: 1px solid #707070;
 }
 
+input::placeholder {
+    color: #495057;
+    font-size: 16px;
+}
