--- a/src/app/pre-login/components/reset-password/reset-password.component.html
+++ b/src/app/pre-login/components/reset-password/reset-password.component.html
@@ -116,7 +116,7 @@
         <button kendoButton class="btn-save" *ngIf="!saved" (click)="submitForm()">
           SAVE & LOG IN
         </button>
-        <button kendoButton class="btn-save btn-save--saved" routerLink="/login" *ngIf="saved" (click)="submitForm()">
+        <button kendoButton class="btn-save btn-save--saved" routerLink="/" *ngIf="saved" (click)="submitForm()">
             LOG IN
           </button>
       </div>
