--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -18,7 +18,7 @@
             <div>
               <a
                 kendo-link
-                routerLink=""
+                routerLink="/dashboard"
                 routerLinkActive="active-link"
                 [routerLinkActiveOptions]="{ exact: true }"
                 class="link"
@@ -29,7 +29,6 @@
             <div>
               <a
                 kendo-link
-                href="#"
                 (click)="showReportOptions($event)"
                 class="link link-reports report popup-btn"
                 [ngClass]="{ 'active-link': showReportMenu }"
@@ -39,8 +38,8 @@
               </a>
             </div>
 
-            <div>
-              <a kendo-link href="#" class="link">Lead Routing</a>
+            <div> 
+              <a kendo-link class="link">Lead Routing</a>
             </div>
           </nav>
 
@@ -73,7 +72,7 @@
 </div>
 
 <div class="popup popup-reports d-flex flex-column" *ngIf="showReportMenu">
-  <span (click)="onStandarsReport()">Standard Reports</span>
+  <span>Standard Reports</span>
   <span>Custom Reports</span>
 </div>
 
