--- a/src/app/pre-login/components/login/login.component.html
+++ b/src/app/pre-login/components/login/login.component.html
@@ -88,7 +88,7 @@
           LOG IN
         </button>
       </div>
-      <div class="forgot-password">Forgot password</div>
+      <div class="forgot-password" routerLink="/forgot-password">Forgot password</div>
       <div class="need-help">
         Need help? <span class="email-team">Email the Roobrik team.</span>
       </div>
