added route and regex in profile page

--- a/src/app/post-login/components/profile/profile.component.html
+++ b/src/app/post-login/components/profile/profile.component.html
@@ -74,7 +74,7 @@
         >
           Save
         </button>
-        <a class="reset-pass" href="http://">Reset your password via email</a>
+        <a class="reset-pass" routerLink="/reset-password" href="http://">Reset your password via email</a>
       </div>
     </fieldset>
   </form>
