--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,6 +2,7 @@
   .roobrik-logo {
     width: 202px;
     height: 35px;
+    cursor: pointer;
 
     @media screen and (max-width: 1366px) {
       height: 1.75rem;
