--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,6 +8,7 @@
         <img
           src="assets/images/roobrik_color_horizontal.png"
           class="roobrik-logo"
+          routerLink="/dashboard"
         />
       </kendo-appbar-section>
 
