Standard-reports and coming soon added

--- a/src/app/pre-login/components/forgot-password/forgot-password.component.html
+++ b/src/app/pre-login/components/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
     <div class="title">Forgot password</div>
     <div class="description" *ngIf="!linkSent">
       Please enter your email address and we will send you a link to reset your
-      passwor. You may need to check your spam folder.
+      password. You may need to check your spam folder.
     </div>
     <div
       *ngIf="linkSent && !notiClosed"
