--- a/src/app/post-login/components/standard-reports/standard-reports.component.scss
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.scss
@@ -1,5 +1,5 @@
 .main-container {
-  height: 968px;
+  height: 836;
   margin: 40px 113px;
   padding: 0;
 
@@ -19,6 +19,7 @@
     font-weight: 700;
     line-height: 32px;
     margin-bottom: 0px;
+    letter-spacing: 0.5px;
   }
 
   .has-search .form-control {
@@ -42,10 +43,8 @@
   .custom-placeholder::placeholder {
     font-family: "Helvetica Neue";
     font-size: 16px;
-
     color: #808080;
-    letter-spacing: 0px;
-    font-weight: 700;
+    font-weight: normal;
   }
   
   .selected-reports {
@@ -66,13 +65,11 @@
 
     .btn-download {
       background: #083754;
-
       height: 32px !important;
       color: #ffffff;
       margin-left: 21px;
       padding: 13px 9px;
-      text-transform: uppercase;
-      font-weight: 700;
+      font-weight: normal;
       border-radius: 0px !important;
     }
   }
@@ -189,16 +186,17 @@
   background-size: 28px 28px !important;
   background: fixed;
   background-size: cover;
-  width: 18px;
-  margin-left: 3px;
-  margin-top: -1px;
+  width: 16px;
+  margin-left: 2px;
+  margin-top: 2px;
+
 }
 
 ::ng-deep .ag-checkbox-input {
   appearance: none;
   -webkit-appearance: none;
   &:checked {
-    background-color: green !important;
+    background-color: #1F7365 !important;
     border: none !important;
     &::after {
       display: none !important;
@@ -212,10 +210,8 @@
   -webkit-appearance: none !important;
   opacity: 1 !important;
   border: 2px solid #d0d0d0;
-  width: 24px;
-  height: 24px;
-  border-radius: 3px;
-  margin-top: -4px;
+  width: 20px;
+  height: 20px;
 }
 
 ::ng-deep .ag-checkbox .ag-input-wrapper {
