Change requests changes

--- a/src/app/post-login/components/home/home.component.scss
+++ b/src/app/post-login/components/home/home.component.scss
@@ -24,6 +24,7 @@
     margin: 0 307px 115px;
     width: 1346px;
     gap: 3vw;
+    padding-top: 23.5px !important;
     @media screen and (min-width: 1300px) {
       gap: 5vw;
     }
