--- a/src/app/pre-login/components/reset-password/reset-password.component.scss
+++ b/src/app/pre-login/components/reset-password/reset-password.component.scss
@@ -5,13 +5,12 @@
 
   @media screen and (min-width: 1921px) {
     min-width: auto;
-    margin-left: auto;
     margin-right: auto;
   }
 }
 
 .form {
-  padding: 14.625rem 0 0 7.125rem;
+  padding: calc((234px / 1181px) * 100vh) 0px 0px 7.125rem;
 }
 
 .logo {
