--- a/src/app/pre-login/components/forgot-password/forgot-password.component.scss
+++ b/src/app/pre-login/components/forgot-password/forgot-password.component.scss
@@ -5,13 +5,12 @@
 
   @media screen and (min-width: 1921px) {
     min-width: auto;
-    margin-left: auto;
     margin-right: auto;
   }
 }
 
 .form {
-  padding: 14.87rem 0 0 7.125rem;
+  padding: calc((234px / 1181px) * 100vh) 0px 0px 7.125rem;
 
   img {
     height: 48px;
@@ -38,7 +37,7 @@
 }
 
 .description {
-  width: 310px;
+  width: 320px;
   color: #707070;
   font-size: 16px;
   font-weight: normal;
